--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+aniso8601==3.0.2
+atomicwrites==1.2.1
+attrs==18.2.0
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
 Flask==1.0.2
 Flask-GraphQL==2.0.0
-graphene>=2.0
+graphene==2.1.3
 graphql-core==2.1
+graphql-relay==0.4.5
 graphql-server-core==1.1.1
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+more-itertools==4.3.0
+pluggy==0.7.1
 promise==2.1
+py==1.6.0
+pytest==3.8.0
 requests==2.19.1
 Rx==1.6.1
 six==1.11.0
